Bug 174684 - Date in message list not updated when changing the day
Summary: Date in message list not updated when changing the day
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 186446 188286 188543 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-09 06:10 UTC by Médéric Boquien
Modified: 2009-04-03 09:20 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
displays the bug in the date (31.73 KB, image/png)
2009-01-10 12:50 UTC, Christophe Prud'homme
Details
Inconsistent mail dates (today/yesterday bug) (76.45 KB, image/png)
2009-02-28 20:44 UTC, kubuntu.support.mail
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Médéric Boquien 2008-11-09 06:10:28 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Hi,

With the new messages list, messages are in a tree, sorted by days. However, when going past midnight, the title of the day is not updated. For instance if one opens kmail on saturday, the day's name will be "Today". After midnight, new emails will be put under "Sunday".

The expected behaviour: "Today" becomes "Yesterday" and new emails are put in "Today".

Thanks
Comment 1 Christophe Prud'homme 2009-01-10 12:50:34 UTC
Created attachment 30088 [details]
displays the bug in the date
Comment 2 Christophe Prud'homme 2009-01-10 12:52:22 UTC
the attachment (id=30088) displays the bug. The date in Kmail is correct (Friday) on the right, but it is shown in the Section Today (left) and today is actually Saturday.

I erased my emails from Today (Saturday) and got this behavior.
Comment 3 kubuntu.support.mail 2009-02-28 20:44:23 UTC
Created attachment 31705 [details]
Inconsistent mail dates (today/yesterday bug)

I experience similar bug. Kmail doesn't update today/yesterday when the day changes while running. In tree-view messages from yesterday have date shown as today and ar in yesterdays 'folder'.

See attached image ...
Comment 4 Szymon Stefanek 2009-03-06 05:01:55 UTC
SVN commit 935746 by stefanek:

Reload the message views when the date changes.

BUG: 174684



 M  +28 -1     manager.cpp  
 M  +15 -2     manager.h  
 M  +34 -0     model.cpp  
 M  +10 -0     model.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=935746
Comment 5 Christophe Marin 2009-03-07 17:54:23 UTC
*** Bug 186446 has been marked as a duplicate of this bug. ***
Comment 6 Thomas McGuire 2009-03-11 15:10:43 UTC
SVN commit 938190 by tmcguire:

Backport r935746 by stefanek from trunk to the 4.2 branch:

Reload the message views when the date changes.

CCBUG: 174684




 M  +28 -1     manager.cpp  
 M  +15 -2     manager.h  
 M  +34 -0     model.cpp  
 M  +10 -0     model.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=938190
Comment 7 Jaime Torres 2009-03-27 23:28:17 UTC
*** Bug 188286 has been marked as a duplicate of this bug. ***
Comment 8 Jaime Torres 2009-04-03 09:20:50 UTC
*** Bug 188543 has been marked as a duplicate of this bug. ***