Reload the message views when the date changes.

BUG: 174684


svn path=/trunk/KDE/kdepim/; revision=935746